@@ -913,29 +913,29 @@ It is memorize through a local structure. This function assigns it to a scheduli
 Returns the policy data previously assigned to a context
 @end deftypefun
 
-@deftypefun void starpu_sched_set_min_priority (int @var{min_prio})
-Defines the minimum priority level supported by the scheduling policy. The
+@deftypefun void starpu_task_set_min_priority (int @var{min_prio})
+Defines the minimum task priority level supported by the scheduling policy. The
 default minimum priority level is the same as the default priority level which
 is 0 by convention.  The application may access that value by calling the
-@code{starpu_sched_get_min_priority} function. This function should only be
+@code{starpu_task_get_min_priority} function. This function should only be
 called from the initialization method of the scheduling policy, and should not
 be used directly from the application.
 @end deftypefun
 
-@deftypefun void starpu_sched_set_max_priority (int @var{max_prio})
+@deftypefun void starpu_task_set_max_priority (int @var{max_prio})
 Defines the maximum priority level supported by the scheduling policy. The
 default maximum priority level is 1.  The application may access that value by
-calling the @code{starpu_sched_get_max_priority} function. This function should
+calling the @code{starpu_task_get_max_priority} function. This function should
 only be called from the initialization method of the scheduling policy, and
 should not be used directly from the application.
 @end deftypefun
 
-@deftypefun int starpu_sched_get_min_priority (void)
+@deftypefun int starpu_task_get_min_priority (void)
 Returns the current minimum priority level supported by the
 scheduling policy
 @end deftypefun
 
-@deftypefun int starpu_sched_get_max_priority (void)
+@deftypefun int starpu_task_get_max_priority (void)
 Returns the current maximum priority level supported by the
 scheduling policy
 @end deftypefun
