@@ -26,24 +26,24 @@ static int sched_max_prio = 1;
 /* The scheduling policy may set its own priority bounds in case it supports
  * different priority levels. These methods should only be called from the
  * scheduling policy. */
-void starpu_sched_set_min_priority(int min_prio)
+void starpu_task_set_min_priority(int min_prio)
 {
 	sched_min_prio = min_prio;
 }
 
-void starpu_sched_set_max_priority(int max_prio)
+void starpu_task_set_max_priority(int max_prio)
 {
 	sched_max_prio = max_prio;
 }
 
 /* Returns the minimum priority level supported by the scheduling policy. */
-int starpu_sched_get_min_priority(void)
+int starpu_task_get_min_priority(void)
 {
 	return sched_min_prio;
 }
 
 /* Returns the maximum priority level supported by the scheduling policy. */
-int starpu_sched_get_max_priority(void)
+int starpu_task_get_max_priority(void)
 {
 	return sched_max_prio;
 }
